--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mc-app-service
+  name: app-service
 spec:
   type: LoadBalancer
   ports:
@@ -10,4 +10,5 @@ spec:
     targetPort: 8080
     protocol: TCP
   selector:
+
     app: mc-app
